--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./Console-CMD.txt">Console-CMD</a>
+    <a href="./VS Code Shortcut Keys.txt">VS Code Shortcut Keys</a>
 </body>
 </html>
