--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
 </head>
+
 <body>
-    <a href="./Console-CMD.txt">Console-CMD</a>
-    <a href="./VS Code Shortcut Keys.txt">VS Code Shortcut Keys</a>
+    <h1>Notes</h1>
+    
+    <h4><a href="./VS Code Shortcut Keys.txt">VS Code Shortcut Keys</a></h4>
+    <h4><a href="./Console-CMD.txt">Console / CMD</a></h4>
+    
 </body>
+
 </html>
